Widen signup reminder container to avoid text wrap

--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ img#hero-image {
 }
 
 .signup-reminder-container {
-  width: 52%;
+  width: 55%;
   background-color: #bab7ff;
   color: #080513;
   border-radius: 10px;
